plex/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
---
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  namespace: plex
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
