plex/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: plex.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 32400
  tls:
    - secretName: plex-tls-prod-cert
      hosts:
        - plex.sost.ovh
